@@ -1,5 +1,6 @@
 0.0.12
     o include directly plots in report
+    o getPageVar/countNLines: fix when variable contains missing value
 0.0.11
     o subjectProfileTextPlot: fix in case subjectVar same as paramNameVar/paramValueVar
 0.0.10
